@@ -1,3 +1,8 @@
+Sun May  4 15:13:35 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* upstream-trunk: Sync'd with
+	https://svn.code.sf.net/p/elftoolchain/code/trunk@r3034
+
 Sun Apr 20 13:53:31 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* current-trunk: Merged from upstream-trunk.
